--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-hello-world",
+  "name": "adobe-challenge",
   "version": "1.0.0",
   "description": "React Hello World",
   "main": "index.js",
@@ -7,11 +7,14 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "stop": "kill $(lsof -t -i:3000)"
   },
   "author": "CodeMix",
   "license": "ISC",
   "dependencies": {
+    "react-router-dom": "^5.0.1",
+    "react-bootstrap": "^1.2.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "^2.1.5"
